# mcp-kapila-style-cpp

./: .gitignore  CMakeLists.txt  README.md  run_openvto_sample.sh
apps/: CMakeLists.txt  mcp-openvto.cpp  mcp_kapila_style.cpp  mcp_openvto.cpp
apps_testing/: CMakeLists.txt  couchbase_test.cpp  dataset_test.cpp  loading.cpp  loading_and_embed.cpp  ollama_embedder.cpp  ollama_to_eigen.cpp  open_browser.cpp  replicate_test.cpp
data-prep/: data_prep.ipynb
db/: img_link.txt
examples/: CMakeLists.txt  mcp_kapila_style.cpp
include/: mcp_message.h
include/utils/: couchbase_search.h  csv_parser.h  open_browser.h  replicate_inference.h
src/: CMakeLists.txt
src/utils/: couchbase_search.cpp  csv_parser.cpp  open_browser.cpp  replicate_inference.cpp
